--- a/RODBC Quick Start.Rmd
+++ b/RODBC Quick Start.Rmd
@@ -77,6 +77,12 @@ channel<- odbcConnect(dsn="pacfin",uid=paste(pf.cred$UID),pw=paste(pf.cred$PW),b
 sqlTables(channel,schema="PACFIN_MARTS")
 close(channel)
 
+#I can't access anything from NORPAC...or maybe there's just nothing in there
+channel<- odbcConnect(dsn="pacfin",uid=paste(pf.cred$UID),pw=paste(pf.cred$PW),believeNRows=FALSE)
+sqlTables(channel,schema="NORPAC")
+close(channel)
+
+
 #the comprehensive tables have waaaaaaaaaay too many columns to reasonably display so I'm switching over
 # to the Trawl Logbook FTID table here
 channel<- odbcConnect(dsn="pacfin",uid=paste(pf.cred$UID),pw=paste(pf.cred$PW),believeNRows=FALSE)
@@ -311,6 +317,47 @@ ggplot(plot.df,aes(x=trip.dist)) + geom_histogram(color='black',fill='blue',alph
 
 ## Bonus
 
+### Creating Tables
+```{r}
+# Creating tables
+
+channel<- odbcConnect(dsn="pacfin",uid=paste(pf.cred$UID),pw=paste(pf.cred$PW),believeNRows=FALSE)
+sqlTables(channel,schema="AMAMULA")
+sqlQuery(channel, "CREATE TABLE comp_or_ifq AS
+         (SELECT pacfin_year ,landing_month ,pacfin_gear_code ,pacfin_gear_description ,ifq_management_area ,pacfin_species_code ,pacfin_species_common_name ,SUM(round_weight_mtons) AS rnd_mtons
+         FROM pacfin_marts.comprehensive_ft
+         WHERE pacfin_year = 2016
+         AND agency_code = 'O'
+         AND is_ifq_landing = 'T'
+         GROUP BY pacfin_year ,landing_month ,pacfin_gear_code ,pacfin_gear_description ,ifq_management_area ,pacfin_species_code ,pacfin_species_common_name);" )
+
+sqlTables(channel,schema="AMAMULA")
+
+comp_or_ifq <- sqlQuery(channel, "select * from AMAMULA.comp_or_ifq")
+head(comp_or_ifq)
+
+sqlQuery(channel, "DROP TABLE comp_or_ifq PURGE;")
+close(channel)
+
+#Create a View
+channel<- odbcConnect(dsn="pacfin",uid=paste(pf.cred$UID),pw=paste(pf.cred$PW),believeNRows=FALSE)
+sqlTables(channel,schema="AMAMULA")
+sqlQuery(channel, "CREATE OR REPLACE VIEW comp_or_ifq_v AS
+(SELECT pacfin_year ,landing_month ,pacfin_gear_code ,pacfin_gear_description ,ifq_management_area ,pacfin_species_code ,pacfin_species_common_name ,SUM(round_weight_mtons) AS rnd_mtons
+FROM pacfin_marts.comprehensive_ft
+WHERE pacfin_year = 2016
+AND agency_code = 'O'
+AND is_ifq_landing = 'T'
+GROUP BY pacfin_year ,landing_month ,pacfin_gear_code ,pacfin_gear_description ,ifq_management_area ,pacfin_species_code ,pacfin_species_common_name);" )
+sqlTables(channel,schema="AMAMULA")
+
+ 
+sqlQuery(channel, "DROP VIEW comp_or_ifq_v;")
+sqlTables(channel,schema="AMAMULA")
+close(channel)
+
+```
+
 ### Data Types and Stuff
 
 This is something I rarely worry about because I haven't yet had a reason to worry much about it...but if you are somebody that needs to care a lot about data types you can use **sqlColumns** to describe the fields in a database...but honestly I've found it way easier to use SQL Developer for stuff like looking at database tables.
@@ -369,3 +416,56 @@ Sys.time() - t
 ```
 
 Firing up the SQL Developer adds an extra step but can save a lot of time if you are pulling from a big table like the fish tickets.
+
+### Maps
+
+This is not intimately related to pull data from PacFIN but it's something I just started working that results in some cool pictures...so I included it.  I totally pirated this example from a [blog post I found here](http://www.kevjohnson.org/making-maps-in-r/).
+
+R has a couple libraries that play nice with shapefiles which make R a more powerful GIS tool than a lot of people realize.  In the chunk below I followed a couple simple steps to create a pretty decent poverty map for California:
+
+* pulled California Census Tract Boundaries from the Census Bureau's [TIGER Database](https://www.census.gov/geo/maps-data/data/cbf/cbf_tracts.html)
+* used the Census Bureaus American Communities Survey to get families with dependent children below the poverty line organized by Census Tract
+* used *fortify()* from the **ggplot2** package to covert the Census Tract Boundaries from a SpatialPolygonDataFrame object to a dataframe object
+* used **dplyr**'s *left_join* function to join this data frame with the poverty data
+* pulled California County Boundaries from the TIGER Database
+* displayed the poverty percentages by Census Tract in the **ggplot** environment
+* overlaid the County Boundaries instead of the Census Tract Boundaries just to make the map look nicer
+
+```{r}
+library(rgdal)
+library(rgeos)
+library(maptools)
+library(scales)
+library(dplyr)
+library(ggplot2)
+library(mapproj)
+
+ca.tract <- readOGR(dsn = "data", layer = "cb_2015_06_tract_500k")
+ca.tract <- fortify(ca.tract,region="AFFGEOID")
+
+ca.poverty <- read.csv("data/acs_poverty_family.csv")
+ca.poverty <- ca.poverty[,c('GEO.id','allfamilies_depchildren_pctpoverty')]
+names(ca.poverty) <- c('id','pct_poverty')
+
+plotData <- left_join(ca.tract,ca.poverty)
+
+#add county boundaries so the map doesn't get too busy
+ca.county <- readOGR(dsn="data",layer="gz_2010_06_060_00_500k")
+ca.county <- fortify(ca.county,region="COUNTY")
+
+#converty values to decimal format just to play nice with the distiller
+plotData$pct_poverty <- plotData$pct_poverty/100
+
+#now map it and make it look nicer
+ggplot() +
+  geom_polygon(data = plotData, aes(x = long, y = lat, group = group,
+                                    fill = pct_poverty)) +
+  geom_polygon(data = ca.county, aes(x = long, y = lat, group = group),
+               fill = NA, color = "black", size = 0.25) +
+  coord_map() +
+  scale_fill_distiller(palette = "Greens", labels = percent,
+                       breaks = pretty_breaks(n = 10)) +
+  guides(fill = guide_legend(reverse = TRUE)) + theme_bw()
+```
+
+This isn't totally unrelated to PacFIN.  Some of you heard about an ongoing project with PacFIN to get community level economic and demographic data into a PacFIN database.  This will likely make it much easier for us to do community-level economic impact analysis because, rather than battle with the Census Bureau's datamart to get hundreds of data series saved as .csv files, we will be able to pull them from PacFIN.    
